dist/monica/Deployment.monica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: monica
  name: monica
  namespace: monica
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: monica-app-monica-app-deployment-c8b445f6
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: monica
        cdk8s.io/metadata.addr: monica-app-monica-app-deployment-c8b445f6
    spec:
      automountServiceAccountToken: false
      containers:
        - image: monica:4.0.0-apache
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 80
          name: monica
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 80
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /var/www/html/storage
              name: pvc-data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
