dist/monica/Ingress.monica.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: monica
  namespace: monica
spec:
  rules:
    - host: monica.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: monica
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - monica.cmdcentral.xyz
